--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="cream">#DAE3BB</color>
+    <color name="yelow">#F8B718</color>
+    <color name="old_green">#9EC46F</color>
+    <color name="old_white">#FFF7EC</color>
+    <color name="green">#D6ECCD</color>
 </resources>
