--- a/app/src/main/res/layout/fragment_education.xml
+++ b/app/src/main/res/layout/fragment_education.xml
@@ -12,6 +12,7 @@
         android:id="@+id/rv_education"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="104dp"
         tools:listitem="@layout/education_item"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
