--- a/app/src/main/res/layout/activity_detail_education.xml
+++ b/app/src/main/res/layout/activity_detail_education.xml
@@ -26,7 +26,7 @@
         android:fontFamily="@font/poppinsmedium"
         android:maxLines="2"
         android:text="@string/title"
-        android:textSize="18dp"
+        android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +47,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/poppinsmedium"
             android:text="@string/desc"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
