--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.splashscreen.SplashScreenActivity"
-    android:background="@color/green">
+    android:background="@color/cream">
 
     <ImageView
         android:id="@+id/imageView"
