--- a/app/src/main/res/drawable/bg_home_page_top.xml
+++ b/app/src/main/res/drawable/bg_home_page_top.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/green"/>
+    <solid android:color="@color/cream"/>
     <corners
         android:bottomLeftRadius="40dp"
         android:bottomRightRadius="40dp"/>
