--- a/app/src/main/res/layout/fragment_education.xml
+++ b/app/src/main/res/layout/fragment_education.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    android:background="@color/green"
+    android:background="@color/cream"
     tools:context=".view.education.EducationFragment">
 
     <androidx.recyclerview.widget.RecyclerView
