--- a/app/src/main/res/values/data.xml
+++ b/app/src/main/res/values/data.xml
@@ -55,6 +55,21 @@
         <item>978000</item>
     </integer-array>
 
+    <string-array name="name_toko">
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+    </string-array>
+
+    <string-array name="almt_toko">
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+    </string-array>
+
     <bool name="bool_true">true</bool>
     <bool name="bool_false">false</bool>
 </resources>
