--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -140,13 +140,13 @@
         app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tv_terdekat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/poppinsmedium"
-        android:text="@string/pembelian"
+        android:text="Toko Terdekat"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView6"
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
@@ -160,7 +160,7 @@
         android:fontFamily="@font/poppinsmedium"
         android:text="@string/video_edukasi"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintStart_toEndOf="@+id/tv_terdekat"
         app:layout_constraintTop_toBottomOf="@+id/imageView8" />
 
     <TextView
