--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,13 +39,13 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="323dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="38dp"
+        android:layout_width="343dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="48dp"
         android:text="SURYA"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.282"
+        app:layout_constraintHorizontal_bias="0.409"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -63,13 +63,13 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="323dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="341dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="4dp"
         android:text="Email"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.329"
+        app:layout_constraintHorizontal_bias="0.371"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
@@ -87,13 +87,13 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="304dp"
-        android:layout_height="35dp"
+        android:layout_width="340dp"
+        android:layout_height="40dp"
         android:layout_marginTop="4dp"
         android:text="Jenis Kelamin"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.271"
+        app:layout_constraintHorizontal_bias="0.38"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view3" />
 
@@ -110,14 +110,18 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:layout_width="129dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="144dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/yelow"
         android:text="Edit"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.861"
+        app:layout_constraintHorizontal_bias="0.854"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/view5"
+        app:layout_constraintVertical_bias="0.0" />
 
     <View
         android:id="@+id/view3"
@@ -130,6 +134,17 @@
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <View
+        android:id="@+id/view5"
+        android:layout_width="346dp"
+        android:layout_height="3dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.415"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView5"
@@ -154,13 +169,13 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="342dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="4dp"
         android:text="No.Tlp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.078"
+        app:layout_constraintHorizontal_bias="0.382"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
 
