--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="yelow">#F8B718</color>
     <color name="old_green">#9EC46F</color>
     <color name="old_white">#FFF7EC</color>
+    <color name="green">#D6ECCD</color>
     <color name="grey">#737070</color>
 </resources>
