--- a/app/src/main/res/values/data.xml
+++ b/app/src/main/res/values/data.xml
@@ -56,18 +56,17 @@
     </integer-array>
 
     <string-array name="name_toko">
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>qkqkqk</item>
+        <item>qlqlql</item>
+        <item>lqlqlq</item>
+        <item>qlqlql</item>
     </string-array>
 
     <string-array name="almt_toko">
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>qlqlql</item>
+        <item>qlqlql</item>
+        <item>qlqlql</item>
+        <item>qlqlql</item>
     </string-array>
 
     <bool name="bool_true">true</bool>
