--- a/app/src/main/res/layout/list_toko.xml
+++ b/app/src/main/res/layout/list_toko.xml
@@ -80,6 +80,16 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_addres"
             app:layout_constraintVertical_bias="0.0" />
 
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="20dp"
+            android:src="@drawable/bintang"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.712"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_open"
+            app:layout_constraintVertical_bias="0.3" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
