--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -114,17 +114,17 @@
         android:layout_height="67dp"
         android:layout_marginStart="35dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/ic_home_pembelian"
+        android:src="@drawable/ic_home_terdekat"
         app:layout_constraintStart_toStartOf="@+id/imageView6"
         app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/ic_penjualan"
         android:layout_width="67dp"
         android:layout_height="67dp"
         android:layout_marginStart="35dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/ic_home_education"
+        android:src="@drawable/ic_home_penjualan"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
         app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
@@ -135,17 +135,18 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="30dp"
         android:src="@drawable/ic_home_comunity"
-        app:layout_constraintStart_toEndOf="@+id/imageView8"
+        app:layout_constraintStart_toEndOf="@+id/ic_penjualan"
         app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
     <TextView
         android:id="@+id/tv_terdekat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/poppinsmedium"
-        android:text="Toko Terdekat"
+        android:text="@string/toko_terdekat"
+        android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView6"
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
@@ -160,7 +161,7 @@
         android:text="@string/video_edukasi"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tv_terdekat"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+        app:layout_constraintTop_toBottomOf="@+id/ic_penjualan" />
 
     <TextView
         android:layout_width="wrap_content"
