--- a/app/src/main/res/layout/activity_struk.xml
+++ b/app/src/main/res/layout/activity_struk.xml
@@ -96,7 +96,7 @@
         android:text="PAYMENT METHODS: Transfer" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btn_done"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:layout_marginLeft="85dp"
